--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,41 @@
         android:theme="@style/Theme.Campustaurant"
         tools:targetApi="31">
         <activity
+            android:name=".MenuSelectActivity4"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MenuSelectActivity3"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MenuSelectActivity1"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MenuSelectActivity2"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MenuSelectActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".RegisterActivity"
             android:exported="false">
             <meta-data
@@ -21,7 +56,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="true"> <!--false로 설정되어있으면 앱이 실행이 안됨-->
+            android:exported="true"> <!-- false로 설정되어있으면 앱이 실행이 안됨 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
