--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,14 @@
         android:theme="@style/Theme.Campustaurant"
         tools:targetApi="31">
         <activity
-            android:name=".MenuSelectActivity"
+            android:name=".RoomListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".CreateRoomActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
