--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+
+        // 네이버 지도 저장소
+        maven{
+            url 'https://naver.jfrog.io/artifactory/maven/'
+        }
     }
 }
 rootProject.name = "Campustaurant"
