--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ android {
 }
 
 dependencies {
-
+    // 네이버 지도 SDK
+    implementation 'com.naver.maps:map-sdk:3.16.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
